@startuml

title __EMPLOYEE's Class Diagram__\n

  package  {
    package servlets.Employee {
      class EditEmployeeServlet {
          # doPost()
          # doGet()
      }
    }
  }
  

  package  {
    package servlets.Employee {
      class EmployeeServlet {
          {static} - serialVersionUID : long
          # service()
          - verification()
      }
    }
  }
  

  EditEmployeeServlet -up-|> HttpServlet
  EmployeeServlet -up-|> HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
